# TickTask

./: LICENSE  pyproject.toml
assets/: ticktask.css
ticktask/: app.py
ticktask/engine/: task.py  timer.py
ticktask/ui/: custom_bar.py  dynamic_footer.py  notes_area.py  task_bar.py  timer.py
