[project]
name = "ticktask"
version = "0.1.0"
description = "Minimalist terminal-based productivity hub"
authors = [
    {name = "Lunacharskiym",email = "lunacharskiym@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "textual (>=3.5.0,<4.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "textual-dev (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
